refactor(html): 优化HTML截图工具的并发安全性和资源管理